# Prosetta

./: .gitignore  LICENSE  README.md
CodeMirror/: editor.bundle.js  editor.mjs  package-lock.json  package.json
Frontend/: alias_data.js  color.css  examples.js  index.html  index.js  language_worker.js  lsp-connection.js  lsp-worker.js  package-lock.json  package.json  rollup.config.mjs  runner_worker.js  script.bundle.js  script.js  script.mjs  style.css  types.js  webpack.config.js  wordsForAliases.js
Interpreter Test/: interpreter.py
LetterFrequency/: 3_letters_sorted.csv  all_words_in_js.py  better_words_for_aliases.json  check_word.py  command_analysis.py  fizzbuzz.txt  words.js  (+13 more)
Rust Interpreter/: Cargo.toml  build-wasm.ps1  build-wasm.sh  function weirdness.txt  old_parser.rs  old_parser_state.rs  regenerate-doc-tests.ps1  regenerate-doc-tests.sh  tarpaulin-report.html  test-coverage.sh  wasm.bash
Rust Interpreter/.cargo/: config.toml
Rust Interpreter/src/: bounds_writer.rs  commands.rs  docs_lib.rs  error_messages.rs  fail_map.rs  lib.rs  linq_like_writer.rs  main.rs  parser.rs  parser_runner.rs  parser_source.rs  parser_structs.rs  parsing_tests.rs  parsing_tests1.rs  parsing_tests2.rs  parsing_tests_milo.rs  parsing_tests_other.rs  parsing_tests_word_funcs.rs  playground.rs  processing_writer.rs  testing.rs  writers.rs
Rust Interpreter/src/parser/: abs.rs  add_mult.rs  alias.rs  alias_data.rs  append.rs  assign.rs  basic_func.rs  bezier.rs  builtins.rs  builtins_data.rs  call_func.rs  circle.rs  color.rs  comment.rs  delete.rs  else_stat.rs  elsestatement.rs  eq.rs  fill.rs  find.rs  floor.rs  foreach.rs  frame.rs  function.rs  if_stat.rs  ifstatement.rs  ignore.rs  index.rs  len.rs  line.rs  line_width.rs  list.rs  litcolor.rs  litcolor_data.rs  move_to.rs  multi_lit_num.rs  not.rs  num.rs  num_lit.rs  num_literal.rs  (+17 more)
Rust Interpreter/src/testing/: colors.txt  docs_lib.rs  mod.rs  parsing_tests_milo.rs  parsing_tests_other.rs  parsing_tests_simple.rs  parsing_tests_word_funcs.rs  test_assign_vars.rs  test_closing.rs  test_colors.rs  test_docs.rs  test_fill.rs  test_foreach.rs  test_functions.rs  test_if_while.rs  test_lit_int.rs  test_numbers.rs  test_operators.rs  test_other.rs  test_print.rs  test_rand_floor.rs  test_shapes.rs  test_trig.rs  test_turtle.rs  test_types_cache.rs  test_word_funcs.rs  testing.rs
Rust Interpreter/src/writers/: error_messages.rs  javascript_writer.rs  line_trigger_writer.rs  linq_like_writer.rs  lisp_like_writer.rs  processing_writer.rs  runner.rs  syntax_lint.rs  syntax_renderers.rs  word_trigger_writer.rs
Rust Interpreter/src/writers/syntax_renderers/: html_renderer.rs  line_renderer.rs  wind_renderer.rs
(+180 files in other folders)
