[package]
name = "prosetta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# wasm = ["dep:wasm-bindgen", "dep:wasm-pack", "dep:getrandom", "dep:wee_alloc"]
wasm = ["dep:wasm-bindgen"]
runner = []
image = ["runner", "dep:nannou"]


[dependencies]
bstr = "1.10.0"
cfg-if = "1.0.0"
nannou = { version = "0.19.0", optional = true }
quickscope = "0.2.0"
wasm-bindgen = { version = "0.2.93", optional = true }
#wasm-pack = { version = "0.13.0", optional = true }
# getrandom = { version = "0.2", features = ["js"], optional=true} 
#wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
ntest = "0.9.3"
