[package]
name = "prosetta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:cap"]
no-cache = []
speed = []
no-title = []
gen-doc-output = []
no-doc-tests = []


[dependencies]
wasm-bindgen = { version = "0.2.95", optional = true }
cap = { version = "0.1.2", optional = true }
bstr = "1.10.0"
quickscope = "0.2.0"
rangemap = "1.5.1"
itertools = "0.13.0"
bitflags = "2.6.0"

[dev-dependencies]
ntest = "0.9.3"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
dwarf-debug-info = true
